--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,11 +4,11 @@
     <item
         android:id="@+id/navigation_characters"
         android:icon="@drawable/ic_characters_24"
-        android:title="@string/title_home" />
+        android:title="@string/characters" />
 
     <item
         android:id="@+id/navigation_events"
         android:icon="@drawable/ic_events_24"
-        android:title="@string/title_dashboard" />
+        android:title="@string/events" />
 
 </menu>
