--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,6 +21,9 @@
     <dimen name="dims_56dp">56dp</dimen>
     <dimen name="dims_102dp">102dp</dimen>
     <dimen name="dims_128dp">128dp</dimen>
+    <dimen name="dims_160dp">160dp</dimen>
+
+    <dimen name="dims_250dp">250dp</dimen>
 
     <dimen name="dims_368dp">368dp</dimen>
     <dimen name="dims_400dp">400dp</dimen>
